testdata/invalid/invalid_header.pi
> GET https://vg.no/
InvalidHeaderEntry
< 200